--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
 
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.js"></script>
-
+  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/restangular/1.3.1/restangular.min.js"></script>
+  <script type="text/javascript" src="https://raw.githubusercontent.com/lodash/lodash/4.13.1/dist/lodash.js"></script>
   <script type="text/javascript">
-    angular.module('myApp', ['ui.router']);
+    angular.module('myApp', ['ui.router', 'restangular']);
 
-    angular.module('myApp').config(function($stateProvider, $urlRouterProvider) {
+    angular.module('myApp').config(function($stateProvider, $urlRouterProvider, RestangularProvider) {
       //
       // For any unmatched url, redirect to /state1
       $urlRouterProvider.otherwise("/birth");
