--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <title>UI-ROuter</title>
     <meta charset="utf-8">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -7,37 +8,23 @@
 <body ng-app="myApp">
   <!-- index.html -->
 
-  <div ui-view>
+  <div style="min-height: 200px" class="container">
+    <h1>Hello UI-Router !</h1>
+
+    <br/>
+    <blockquote>
+      <p>The script of this page uses UI-Router with Angular.js (using a graph/tree of states modeled by the cycle of life). The goal is to add some Restangular to
+        resolve http requests between each state using promises.
+      </p>
+    </blockquote>
+  </div>
+
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3" ui-view>
     NOTHING-NONE
+    </div>
   </div>
   <!-- We'll also add some navigation: -->
-
-  <ol>
-    <li>
-      <a ui-sref="birth">Birth</a>
-    </li>
-    <li>
-      <a ui-sref=".childhood">Childhood</a>
-    </li>
-    <li>
-      <a ui-sref="birth.childhood.study">Study</a>
-    </li>
-    <li>
-      <a ui-sref="birth.childhood.career">Career</a>
-    </li>
-    <li>
-      <a ui-sref="birth.childhood.study.phd">PHD</a>
-    </li>
-    <li>
-      <a ui-sref="birth.childhood.career.wl">Working Life</a>
-    </li>
-    <li>
-      <a ui-sref=".cancer">Cancer</a>
-    </li>
-     <li>
-      <a ui-sref=".death">To hell</a>
-    </li>
-  </ol>
 
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.js"></script>
@@ -47,29 +34,29 @@
     angular.module('myApp', ['ui.router', 'restangular']);
 
     angular.module('myApp').config(function($stateProvider, $urlRouterProvider, RestangularProvider) {
-      //
-      // For any unmatched url, redirect to /state1
+
+      // For any unmatched url, redirect to /birth
       $urlRouterProvider.otherwise("/birth");
          $stateProvider
       .state('birth', {
         url: '/birth',
-        template: '<div>You are borned<br><button ui-sref="birth.childhood">childhood</button><div ui-view></div></div>',
+        template: '<div><p>You are borned<br><button class="btn btn-success" ui-sref="birth.childhood">childhood</button></p><div ui-view></div></div>',
       })
       .state('birth.childhood', {
         url: '/childhood',
-        template: '<div>You are grown up<br><button ui-sref="birth.childhood.study">study</button><br><button ui-sref="birth.childhood.career">career</button><div ui-view></div></div>'
+        template: '<div><p>You are grown up<br> <div class="btn-group"> <button class="btn btn-info" ui-sref="birth.childhood.study">study</button> <button class="btn btn-warning" ui-sref="birth.childhood.career">career</button></p> </div> <div ui-view></div></div>'
       })
       .state('birth.childhood.study', {
         url: '/study',
-        template: '<div>Really ?<br><button ui-sref=".phd">phd</button> <button ui-sref=".workinglife">workinglife</button><div ui-view></div></div>'
+        template: '<div><p>Really ?<br> <div class="btn-group"> <button class="btn btn-primary" ui-sref=".phd">phd</button> <button class="btn btn-success" ui-sref=".workinglife">workinglife</button> </div> </p> <div ui-view></div></div>'
       })
       .state('birth.childhood.study.phd', {
         url: '/phd',
-        template: '<div>Great, What next ?<br><button ui-sref=".workinglife">workinglife</button><div ui-view></div></div>'
+        template: '<div><p>Great, What next ?<br><button class="btn btn-success" ui-sref=".workinglife">workinglife</button> </p> <div ui-view></div></div>'
       })
       .state('birth.childhood.career', {
         url: '/career',
-        template: '<div>GoodLuck !<br><button ui-sref=".workinglife">workinglife</button><div ui-view></div></div>'
+        template: '<div><p>GoodLuck !<br><button class="btn btn-success" ui-sref=".workinglife">workinglife</button> </p> <div ui-view></div></div>'
       });
 
 
@@ -80,15 +67,15 @@
     function addWorkingLife($stateProvider, parent){
       $stateProvider.state(`${parent}.workinglife`, {
         url: '/worklife',
-        template: '<div>Good old days<br><button ui-sref=".pension">pension</button><div ui-view></div></div>'
+        template: '<div><p>Good old days<br><button class="btn btn-warning" ui-sref=".pension">pension</button> </p> <div ui-view></div></div>'
       })
       .state(`${parent}.workinglife.pension`, {
         url: '/pension',
-        template: '<div>Good old days<br><button ui-sref=".death">death</button><div ui-view></div></div>'
+        template: '<div><p>Good old days<br><button class="btn btn-danger" ui-sref=".death">death</button> </p> <div ui-view></div></div>'
       })
       .state(`${parent}.workinglife.pension.death`, {
         url: '/death',
-        template: '<div>RIP<br><button ui-sref="birth">birth</button></div>'
+        template: '<div><p>RIP<br><button class="btn btn-default" ui-sref="birth">birth</button> </p> </div>'
       });
     }
   });
