--- a/ui-router-with-foaas.html
+++ b/ui-router-with-foaas.html
@@ -36,10 +36,12 @@
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.js"></script>
 		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/restangular/1.3.1/restangular.min.js"></script>
-		<script type="text/javascript" src="https://raw.githubusercontent.com/lodash/lodash/4.13.1/dist/lodash.js"></script>
+		<script type="text/javascript" src="lodash.min.js"></script>
 		<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 		
 		<script type="text/javascript">
+		'use strict';
+
 			/*
 			 * In lodash 4.0+, _contains is replaced by the alias _contains,
 			 * so it is necessary to do this you want to use GET methods from RestAngular.
