:sweat_smile: Corrected misspelling "borned"

--- a/ui-router-with-foaas.html
+++ b/ui-router-with-foaas.html
@@ -84,7 +84,7 @@
 							}
 						}
 					},
-					template: '<div><p>You are borned<br><button class="btn btn-success" ui-sref="birth.childhood">Childhood</button></p><div ui-view></div></div>',
+					template: '<div><p>You are born<br><button class="btn btn-success" ui-sref="birth.childhood">Childhood</button></p><div ui-view></div></div>',
 				})
 				.state('birth.childhood', {
 					url: '/childhood',
