--- a/ui-router-with-foaas.html
+++ b/ui-router-with-foaas.html
@@ -14,7 +14,7 @@
 
 			<blockquote>
 				<p>
-					The script of this page uses UI-Router with Angular.js (using a graph/tree of states modeled by the cycle of life). The goal is to add some Restangular toresolve http requests between each state using promises.
+					The script of this page uses UI-Router with Angular.js (using a graph/tree of states modeled by the cycle of life). The goal is to add some Restangular toresolve http requests between each state.
 				</p>
 			</blockquote>
 		</div>
